# AnimalCLEF-2026

./: .gitignore  CLAUDE.md  README.md  analyze_test_predicted_orientation.py  analyze_turtle_orientation.py  baseline_config.py  eda.py  eps_grid_search.py  generate_submission_orientation_aware.py  main.py  pyproject.toml  submission.csv  submission_orientation_aware.csv  train_embedding.py  train_orientation_classifier.py  working_notes.md
kaggle_notebooks/: README.md  UPLOAD_GUIDE.md  train_arcface.ipynb
reports/eda/distribution/: counts_by_dataset.csv  counts_by_dataset_split.csv  counts_by_species.csv  counts_by_split.csv
reports/eda/identity_stats/: identity_vs_clusters.md
reports/eda/image_size/: image_size_stats.csv
reports/eda/umap/: umap_LynxID2025.csv  umap_SalamanderID2025.csv  umap_SeaTurtleID2022.csv  umap_TexasHornedLizards.csv  umap_cluster_summary.csv
reports/orientation_analysis/: EXPERIMENT_SUMMARY.md  identity_orientation_counts.csv  orientation_by_dataset.csv  orientation_by_dataset_pivot.csv  orientation_train_test_comparison.csv  test_clustering_log.txt  test_orientation_group_clustering.csv  test_orientation_predictions.csv  test_predicted_orientation_clustering.csv  turtle_train_identity_orientation.csv
